Replaced with production build

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
           href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Leckerli+One&display=swap"
           rel="stylesheet">
-</head>
+<link rel="stylesheet" href="styles.af8e7dcdfe2d5eff87d1.css"></head>
 
 <body>
     <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.c51cc532b65b053f8785.js" nomodule defer></script><script src="polyfills-es2015.8b954393b3b10ce4b65a.js" type="module"></script><script src="main-es2015.b5160d3a2922288b6114.js" type="module"></script><script src="main-es5.b5160d3a2922288b6114.js" nomodule defer></script></body>
 
 </html>
