--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Leckerli+One&display=swap"
           rel="stylesheet">
-<link rel="stylesheet" href="styles.af8e7dcdfe2d5eff87d1.css"></head>
+<link rel="stylesheet" href="styles.af8e7dcdfe2d5eff87d1.css">
+</head>
 
 <body>
     <app-root></app-root>
